Commit workspace instead of build result

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,71 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>Edit Calendar</title>
-		<!-- Set the character set to utf-8 -->
-		<meta charset="utf-8">
-		<!-- Edge mode tells Internet Explorer to display content in the highest mode available. -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<!-- The viewport is set to the width of the device and initially shown at 1:1 scale (without zooming) -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Set a favicon -->
-		<link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
-		<!-- Load Bootstraps stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
-		<!-- Load Font Awesome stylesheet-->
-		<link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css">
-		<!-- Load Blog stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/information-radiator/information-radiator.css">
-	</head>
-	<body>
-		<div class="wrapper">
-	<nav id="navigation" class="navbar navbar-inverse navbar-static-top" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-content">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/">Renta Information Radiator</a>
-		</div>
+---
+layout: header-footer-layout
+title: Edit Calendar
+---
 
-		<div id="navbar-collapse-content" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li id="navbar-home"><a href="/"><i class="fa fa-home fa-fw"></i> Home</a></li>
-				<li id="navbar-projects" class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href=""><i class="fa fa-edit fa-fw"></i> Edit <b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="/smart-actions"><i class="fa fa-list-alt fa-fw"></i> SMART Actions</a></li>
-						<li><a href="/calendar"><i class="fa fa-calendar fa-fw"></i> Calendar</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</div>
-</nav>
-	<div class="container">
-		<div class="row">
+<div class="row">
 	<div class="col-md-12">
 		<h3><i class="fa fa-calendar fa-fw"></i> Calendar</h3>
 		<iframe width="645" height="248" src="https://docs.google.com/spreadsheet/ccc?key=0AjC7NNDI1fmYdEJKUjJYRFBWRzcxMFpaTE9DR0UzaVE&usp=sharing&rm=minimal"></iframe>
 	</div>
 </div>
-	</div>
-	<div class="push"></div>
-</div>
-<footer class="footer">
-	<div id="footer" class="container footer">
-	<p class="text-muted text-center text-footer">
-		Renta Information Radiator
-	</p>
-</div>
-</footer>
-		<!-- Placed at the end of the document to speed up page loading-->
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<!-- Load Bootstraps JavaScript plugins -->
-		<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
-	</body>
-</html>
